TechSummit-2021-vestas: Slide: What is AF_XDP
Extending slides with AF_XDP as Vestas want to use this.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -287,6 +287,14 @@ XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
 #+ATTR_HTML: :class img-no-border
 [[file:images/xdp_architecture.png]]
 
+* Slide: What is AF_XDP?                                             :export:
+
+What is /AF_XDP/? (the *Address Family* /XDP/ socket)
+ - Hybrid *kernel-bypass* facility, /selectively move frames out of kernel/
+ - XDP/BPF-prog filters packets using *REDIRECT* into AF_XDP socket
+ - Delivers raw L2 frames into userspace
+
+
 * Slide: Performance graphs                                          :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
