TechSummit-2021-vestas: Update Overview slide with AF_XDP
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -67,6 +67,8 @@ Taming /BPF superpower/ - is *not easy*
 /What is XDP/?
  - and what *pain points* have recently been /resolved/
 
+/What is AF_XDP/?
+ - How is this connected with XDP and deep-dive into tech details
 
 * Slide: What is BPF ?                                               :export:
 
