--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -107,6 +107,8 @@ Inspirational: BTF based XDP-hints
 Resources:
  - XDP-project - [[https://github.com/xdp-project/][GitHub.com/xdp-project]]
    - Get an easy start with [[https://github.com/xdp-project/bpf-examples][xdp-project/bpf-examples]]
+ - XDP-hints mailing list: *xdp-hints* /@/ *xdp-project.net*
+   - https://lists.xdp-project.net/
 
 * Emacs end-tricks                                                 :noexport:
 
