--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -121,6 +121,25 @@ kernel without changing kernel source code or loading a kernel module
 
 [[file:../TechSummit-2021/images/bpf_comic02_scale.png]]
 
+
+* Slide: */Reminder/* What is XDP?                                   :export:
+
+XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
+ - /Programmable layer in-front/ of traditional network stack
+   - Read, modify, drop, redirect or pass
+   - For L2-L3 use-cases: seeing /x10 performance/ improvements!
+ - *Avoiding* /memory allocations/
+   - No SKB allocations and no-init (SKB zeroes 4 cache-lines per pkt)
+ - Adaptive *bulk* processing of frames
+ - Very /early access/ to frame (in driver code *after DMA sync*)
+ - Ability to */skip/ (large parts) of kernel /code/*
+   - Evolve XDP via /BPF-helpers/
+ - */Pitfall/*: Lost traditional HW offloads (e.g. RX-hash, checksum etc.)
+
+** Slide: XDP architecture                                          :export:
+#+ATTR_HTML: :class img-no-border
+[[file:../TechSummit-2021/images/xdp_architecture.png]]
+
 * Slide: End: /Questions?/                                           :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
